// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateLockFile catches errors 1`] = `
Array [
  Object {
    "cmd": "node node_modules/pnpm/lib/bin/pnpm.js install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": null,
    },
  },
]
`;

exports[`generateLockFile finds pnpm embedded in renovate 1`] = `
Array [
  Object {
    "cmd": "node /node_modules/renovate/node_modules/pnpm/lib/bin/pnpm.js install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": null,
    },
  },
]
`;

exports[`generateLockFile finds pnpm globally 1`] = `
Array [
  Object {
    "cmd": "node /node_modules/pnpm/lib/bin/pnpm.js install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": null,
    },
  },
]
`;

exports[`generateLockFile generates lock files 1`] = `
Array [
  Object {
    "cmd": "node node_modules/pnpm/lib/bin/pnpm.js install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": null,
    },
  },
]
`;

exports[`generateLockFile uses docker pnpm 1`] = `
Array [
  Object {
    "cmd": "docker run --rm -v \\"some-dir\\":\\"some-dir\\" -v \\"some-cache-dir\\":\\"some-cache-dir\\" -e NPM_CONFIG_CACHE -e npm_config_store -w \\"some-dir\\" renovate/pnpm pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": null,
    },
  },
]
`;

exports[`generateLockFile uses fallback pnpm 1`] = `
Array [
  Object {
    "cmd": "pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": null,
    },
  },
]
`;
